<resources>
    <string name="app_name">computerShopApplication</string>
    <string name="log_in_here">Log in here</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_main_navigation">MainNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="registration">Registration</string>
    <string name="register_here">Register Here</string>
    <string name="shopping_basket">Shopping basket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="Shop" />
    <string name="shop">Shop</string>
</resources>