<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_person"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_email"
            android:title="@string/log_in" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/ic_logout"
            android:title="@string/registration" />
        <item
            android:id="@+id/nav_shopping_basket"
            android:icon="@drawable/ic_basket"
            android:title="@string/shopping_basket" />

    </group>
</menu>